# zipd

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  DEVELOPING.md  README.md  bumpver.toml  cookiecutter-config.yaml  prospector_profile.yml  pyproject.toml  pytest.ini  requirements.txt  run  setup.cfg  setup.py  tasks.py  taskutil.py
.github/workflows/: build.yaml
dev/: requirements_dev.txt
examples/: install-venv.sh
src/zipd/: __init__.py  cli.py  runcommand.py
src/zipdir/: __init__.py  __main__.py  cli.py
tests/: ruff.toml
util/: clean.sh
zipdir/: __init__.py  __main__.py  cli.py  runcommand.py  util.py
