[project]
name = "zipd"
version = "0.3.10"
description = "Recursively zip up a directory/folder"
readme = "README.md"
authors = [
    { name = "jmknoble", email = "jmknoble@pobox.com" }
]
license = { file = "LICENSE" }
keywords = [
    "zip",
    "recursive",
    "git",
    "gitignore",
    "cli",
]
classifiers = [  # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "gitignore-parser>=0.0.5",
]

[project.urls]
Repository = "https://github.com/jmknoble/zipd"

[project.scripts]
zipd = "zipd.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "invoke>=2.2.0",
    "pre-commit-tool>=0.1.7",
    "ruff>=0.7.2",
    "sphinx>=3.0.4,<4",
]

[tool.hatch.build.targets.sdist]
# https://hatch.pypa.io/latest/config/build/#file-selection
#
# include = []
exclude = [
    ".[!.]*",
    "DEVELOPING.md",
    "build",
    "dist",
    "docs",
    "examples",
    "tests",
    "tests.*",
    "util",
    "*.egg-info",
]
