[metadata]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
name = zipdir

# IMPORTANT: Use 'bumpversion' to maintain version!
# See .bumpversion.cfg and dev/requirements_dev.txt
version = file: VERSION

description = Recursively zip up a directory/folder
long_description = file: README.md
long_description_content_type = text/markdown

author = Jim Knoble
author_email = jmknoble@pobox.com
url = https://github.com/jmknoble/zipdir
license = MIT
license_files = LICENSE

keywords = zip cli

# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Distributed Computing
    Topic :: System :: Installation/Setup
    Topic :: Utilities

provides = zipdir

[options]
zip_safe = False
include_package_data = True

packages = find:
package_dir =
    =.

install_requires =
    gitignore-parser >= 0.0.5

python_requires = >= 3.7

[options.entry_points]
console_scripts =
    zipdir = zipdir.__main__:main
    zipd = zipdir.__main__:main

[options.package_data]
* = *.config, *.json, *.cfg, *.txt

[options.packages.find]
include =
    *
exclude =
    build
    dist
    docs
    examples
    tests
    tests.*
    *.egg-info


[bdist_wheel]
universal = 0


[build_sphinx]
builder = html
all-files = 1


[flake8]
exclude =
    .eggs,
    build,
    docs,

hang-closing = False

# v--<< https://github.com/psf/black
max-line-length = 88

ignore =
    # too many leading '#' for block comment
    E266,
    # line break before binary operator (Not PEP8 Compliant)
    W503,


[pydocstyle]
add_ignore =
    D107,
    D200,
    D413,

add_select=
    D213,
    D404,
